--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p class="impar">Number 1 - I'm a class!</p>
-    <div id="dos">Number 2 - I'm one ID.</div>
-    <p class="impar font">Number 3 - I'm a class, but cooler!</p>
-    <div id="cuatro">number 4- I'm another ID.</div>
-    <p class="impar" >Number 5 - I'm a class!</p>
+    <p class="odd">Number 1 - I'm a class!</p>
+    <div id="two">Number 2 - I'm one ID.</div>
+    <p class="odd font">Number 3 - I'm a class, but cooler!</p>
+    <div id="four">number 4- I'm another ID.</div>
+    <p class="odd" >Number 5 - I'm a class!</p>
   </body>
 </html>
