--- a/flex/04-flex-information/index.html
+++ b/flex/04-flex-information/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -10,17 +10,29 @@
   <body>
     <div class="title">Information!</div>
 
-    <img src="./images/barberry.png" alt="barberry">
-    <div class="text">This is a type of plant. We love this one.</div>
+    
+    <div class="images">
 
-    <img src="./images/chilli.png" alt="chili">
-    <div class="text">This is another type of plant. Isn't it nice?</div>
 
-    <img src="./images/pepper.png" alt="pepper">
-    <div class="text">We have so many plants. Yay plants.</div>
+      <div class="text"> 
+        <img id="img" src="./images/barberry.png" alt="barberry">
+          This is a type of plant. We love this one.
+      </div>
 
-    <img src="./images/saffron.png" alt="saffron">
-    <div class="text">I'm running out of things to say about plants.</div>
+    <div class="text">
+        <img id="img" src="./images/chilli.png" alt="chili">
+        This is another type of plant. Isn't it nice?
+    </div>
+
+    <div class="text"> 
+      <img src="./images/pepper.png" alt="pepper">
+        We have so many plants. Yay plants.
+    </div>
+
+    <div class="text"> 
+      <img src="./images/saffron.png" alt="saffron">
+        I'm running out of things to say about plants.</div>
+    </div>
 
     <!-- disregard this section, it's here to give attribution to the creator of these icons -->
     <div class="footer">
